<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		android_mobile___1
	 *	@date 		0
	 *	@title 		Android Mobile  1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/android_mobile___82" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="640dp" >









			<RelativeLayout android:id="@+id/page_android_mobile___82_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__android_mobile___82_ek2"
					android:background="@drawable/_bg__android_mobile___82_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/navigation_back_ek2"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_ek2"
						android:background="@drawable/rectangle_ek2_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="80dp" />


					<RelativeLayout android:id="@+id/icons_24px_share_ek2"
						android:layout_marginTop="43dp"
						android:layout_marginStart="280dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/__p__share___simple_line_icons_copy_ek2"
							android:fontFamily="simple-line-icons"
							android:textSize="18sp"
							android:textColor="@color/__p__share___simple_line_icons_copy_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="18dp"
							android:layout_height="31dp"
							android:text="@string/__p__share___simple_line_icons_copy_ek2_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/icons_24px_watchlist_ek2"
						android:layout_marginTop="43dp"
						android:layout_marginStart="328dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/path_ek2"
							android:src="@drawable/path_ek2"
							android:contentDescription="path_ek2"
							 android:layout_marginLeft="-3dp"
							 android:layout_marginStart="-3dp"
							android:layout_marginTop="-1dp"
							android:layout_width="17.36181640625dp"
							android:layout_height="19.999847412109dp" />

						<ImageView android:id="@+id/path_copy_ek2"
							android:src="@drawable/path_copy_ek2"
							android:contentDescription="path_copy_ek2"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="12dp"
							android:layout_height="17.645385742188dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/component_7_ek3"
					android:layout_marginTop="38dp"
					android:layout_marginStart="17dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_82_ek3"
						android:background="@drawable/rectangle_82_ek3_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="30dp"
						android:layout_height="30dp" />


					<RelativeLayout android:id="@+id/group_132_ek3"
						android:layout_marginTop="9dp"
						android:layout_marginStart="8dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/path_30_ek3"
							android:src="@drawable/path_30_ek3"
							android:contentDescription="path_30_ek3"
							 android:layout_marginLeft="-1dp"
							 android:layout_marginStart="-1dp"
							android:layout_marginTop="-1dp"
							android:layout_width="8.345703125dp"
							android:layout_height="14.79931640625dp" />

						<ImageView android:id="@+id/path_31_ek3"
							android:src="@drawable/path_31_ek3"
							android:contentDescription="path_31_ek3"
							 android:layout_marginLeft="-1dp"
							 android:layout_marginStart="-1dp"
							android:layout_marginTop="5dp"
							android:layout_width="15.9521484375dp"
							android:layout_height="2dp" />

					</RelativeLayout>

				</RelativeLayout>

				<TextView android:id="@+id/calculators"
					android:fontFamily="Roboto"
					android:textSize="20sp"
					android:textColor="@color/profile_details_color"
					android:layout_marginLeft="76dp"
					android:layout_marginTop="39dp"
					android:layout_width="106dp"
					android:layout_height="30dp"
					android:text="@string/calculators_string"
					 />


				<RelativeLayout android:id="@+id/bookmark_ribbon_ek7"
					android:layout_marginTop="41dp"
					android:layout_marginStart="304dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/bookmark_ek12"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/path_188_ek8"
							android:src="@drawable/path_188_ek8"
							android:contentDescription="path_188_ek8"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="18.66650390625dp"
							android:layout_height="24dp" />

					</RelativeLayout>

				</RelativeLayout>

				<ImageView android:id="@+id/line_22_ek1"
					android:src="@drawable/line_22_ek1"
					android:contentDescription="line_22_ek1"
					 android:layout_marginLeft="66dp"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="146dp"
					android:layout_width="230dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/___copy"
					android:fontFamily="Roboto"
					android:textSize="11sp"
					android:textColor="@color/learn_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="100dp"
					android:layout_width="114dp"
					android:layout_height="17dp"
					android:text="@string/___copy_string"
					 />

				<ImageView android:id="@+id/line_25"
					android:src="@drawable/line_25"
					android:contentDescription="line_25"
					 android:layout_marginLeft="66dp"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="215dp"
					android:layout_width="230dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/___copy_ek1"
					android:fontFamily="Roboto"
					android:textSize="11sp"
					android:textColor="@color/learn_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="169dp"
					android:layout_width="88dp"
					android:layout_height="17dp"
					android:text="@string/___copy_ek1_string"
					 />

				<ImageView android:id="@+id/line_26"
					android:src="@drawable/line_26"
					android:contentDescription="line_26"
					 android:layout_marginLeft="66dp"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="284dp"
					android:layout_width="230dp"
					android:layout_height="1dp" />


				<RelativeLayout android:id="@+id/group_237"
					android:layout_marginTop="123dp"
					android:layout_marginStart="126dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/___copy_ek2"
						android:fontFamily="Roboto"
						android:textSize="15sp"
						android:textColor="@color/name_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="13dp"
						android:layout_height="23dp"
						android:text="@string/___copy_ek2_string"
						 />

					<TextView android:id="@+id/___copy_ek3"
						android:fontFamily="Roboto"
						android:textSize="15sp"
						android:textColor="@color/investing_color"
						android:layout_marginLeft="12dp"
						android:layout_marginTop="2dp"
						android:layout_width="97dp"
						android:layout_height="21dp"
						android:text="@string/___copy_ek3_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_238"
					android:layout_marginTop="192dp"
					android:layout_marginStart="125dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/___copy_ek4"
						android:fontFamily="Roboto"
						android:textSize="15sp"
						android:textColor="@color/name_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="16dp"
						android:layout_height="23dp"
						android:text="@string/___copy_ek4_string"
						 />

					<TextView android:id="@+id/___copy_ek5"
						android:fontFamily="Roboto"
						android:textSize="15sp"
						android:textColor="@color/investing_color"
						android:layout_marginLeft="14dp"
						android:layout_marginTop="2dp"
						android:layout_width="97dp"
						android:layout_height="21dp"
						android:text="@string/___copy_ek5_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/___copy_ek6"
					android:fontFamily="Roboto"
					android:textSize="15sp"
					android:textColor="@color/investing_color"
					android:layout_marginLeft="132dp"
					android:layout_marginTop="263dp"
					android:layout_width="97dp"
					android:layout_height="21dp"
					android:text="@string/___copy_ek6_string"
					 />

				<TextView android:id="@+id/___copy_ek7"
					android:fontFamily="Roboto"
					android:textSize="11sp"
					android:textColor="@color/learn_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="238dp"
					android:layout_width="79dp"
					android:layout_height="17dp"
					android:text="@string/___copy_ek7_string"
					 />

			</RelativeLayout>












		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>